# Codity.AI

./: README.md  index.html  metadata.json  package-lock.json  package.json
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_assignment_pdf.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  dlq.py  jobs.py  metrics.py  queues.py  workers.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/models/: models.py
backend/app/repositories/: __init__.py  base.py  job_repository.py
backend/app/scheduler/: cron_scheduler.py
backend/app/schemas/: auth.py  job.py  worker.py
backend/app/worker/: __init__.py  claimer.py  executor.py  heartbeat.py  lifecycle.py  worker.py
backend/tests/: test_api.py
components/ui/: button.tsx  card.tsx  table.tsx  tabs.tsx
public/: llms.txt  sitemap.xml
src/: App.tsx  index.css
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopNavbar.tsx
src/lib/: gemini.ts
src/pages/: Architecture.tsx  AuditLogs.tsx  DLQ.tsx  Dashboard.tsx  Documentation.tsx  JobDetails.tsx  Jobs.tsx  Login.tsx  Metrics.tsx  ProjectDetails.tsx  Projects.tsx  QueueDetails.tsx  Queues.tsx  Register.tsx  RetryPolicies.tsx  ScheduledJobs.tsx  Settings.tsx  WorkerDetails.tsx  Workers.tsx
