[project]
name = "codity-backend"
version = "0.1.0"
description = "Codity.ai Backend"
authors = [{ name = "Codity", email = "admin@codity.ai" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.9",
    "reportlab>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "faker>=24.8.0",
    "ruff>=0.3.5",
    "aiosqlite>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
